--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
-  <meta name="author" content="Bucky Maler">
+  <meta name="description" content="your digital zone">
+  <meta name="keywords" content="">
   <link rel="stylesheet" href="assets/css/main.css">
-  <meta name="monetization" content="$wallet.example.com/something">
-
+  
 </head>
 <body>
 
@@ -22,7 +20,7 @@
   </a>
   <p class="device-notification--message">Zoned has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
 </div>
-<meta name="monetization" content="$wallet.example.com/something">
+
 <div class="perspective effect-rotate-left">
   <div class="container"><div class="outer-nav--return"></div>
     <div id="viewport" class="l-viewport">
