--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ZONED</title>
+  <title>AstrA</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,9 +16,9 @@
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
     <img src="assets/img/logo.png" style="width: 10px;" alt="Global">
-    <p>Zoned</p>
+    <p>AstrA</p>
   </a>
-  <p class="device-notification--message">Zoned has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">AstrA has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
 </div>
 
 <div class="perspective effect-rotate-left">
@@ -28,7 +28,7 @@
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" style="width: 60px;" alt="Global">
-            <p>Zoned</p>
+            <p>AstrA</p>
           </a>
           <a href="#hire" class="header--cta cta">Hire Us</a>
           <div class="header--nav-toggle">
@@ -49,7 +49,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>"WE<br>LIVE<br>ONCE"</h1>
+                <h1>"WHERE<br>STARS<br>ARE BORN"</h1>
                 <button href="#hire" class="cta">Hire Us
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -63,7 +63,7 @@
               <div class="intro--options">
                 <a href="#Growth">
                   <h3>Exponential Growth</h3>
-                  <p>At Zoned we belive in exponential growth and contant improvement</p>
+                  <p>At AstrA we belive in exponential growth and contant improvement</p>
                 </a>
                 <a href="#Growth">
                   <h3>Elevate your brand</h3>
@@ -132,7 +132,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>Give<br>Your brand<br>A<br>Home</h2>
+                <h2>Ad<br>AstrA</h2>
                 <a class="cta"><b style="width: 300px;">We do the work and you do the dreaming<br>let's grow together</b>
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -166,13 +166,13 @@
                 <div class="modal">
                   <div class="modal--information">
                     <p>We welcome anyone arround the globe </p>
-                    <a href="mailto:sam@zoned.life">sam@zoned.life</a>
+                    <p alert ("HellImnrt!!");>Mail</p>
                     
                   </div>
                   <ul class="modal--options" style="border-radius: 15px;">
-                    <li><a href="https://zoned.substack.com">Substack</a></li>
-                    <li><a href="https://discord.com/invite/KmMVN8HBBD">Discord</a></li>
-                    <li><a href="mailto:sam@zoned.life">Contact Us</a></li>
+                    <li><a href="">News</a></li>
+                    <li><a href="">Community</a></li>
+                    <li><a href="">Contact Us</a></li>
                   </ul>
                 </div>
                 
@@ -208,7 +208,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Addvertising 
+                      Advertising 
                     </label>
                   </span>
                 </div>
