--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
                 <div class="modal">
                   <div class="modal--information">
                     <p>We welcome anyone arround the globe </p>
-                    <p alert ("HellImnrt!!");>Mail</p>
                     
                   </div>
                   <ul class="modal--options" style="border-radius: 15px;">
-                    <li><a href="">News</a></li>
+                    <li><a href="">Mail</a></li>
                     <li><a href="">Community</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="tel:+1 239 494 5970">Call us</a></li>
+
                   </ul>
                 </div>
                 
@@ -240,7 +240,7 @@
                     </span>
                   </a>
                 <img src="assets/img/growth-visual.png" alt="About Us">
-                <iframe src="https://zoned.substack.com/embed" width="100%" height="23%" style="margin-top: 10px; margin-bottom: 30px; border: none; background:rgb(0, 0, 0); border-radius: 15px; color: black;" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://zoned.substack.co/embed" width="100%" height="23%" style="margin-top: 10px; margin-bottom: 30px; border: none; background:rgb(0, 0, 0); border-radius: 15px; color: black;" frameborder="0" scrolling="no"></iframe>
               </div>
             </div>
           </li>
