--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="your digital zone">
   <meta name="keywords" content="">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="icon" type="image/x-icon" href="/assets/img/logo.ico">
   
 </head>
 <body>
@@ -15,7 +16,7 @@
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
-    <img src="assets/img/logo.png" style="width: 10px;" alt="Global">
+    <img src="assets/img/logo.png" style="width: 50px;" alt="Global">
     <p>AstrA</p>
   </a>
   <p class="device-notification--message">AstrA has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
@@ -30,7 +31,7 @@
             <img src="assets/img/logo.png" style="width: 60px;" alt="Global">
             <p>AstrA</p>
           </a>
-          <a href="#hire" class="header--cta cta">Hire Us</a>
+          <a href="#hire" class="header--cta cta">Request a Demo</a>
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -41,7 +42,7 @@
             <li><span>Web-Dev</span></li>
             <li><span>About</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <li><span>Request a Demo</span></li>
             <li><span>Mission</span></li>
           </ul>
         </nav>
@@ -50,7 +51,7 @@
             <div class="intro">
               <div class="intro--banner">
                 <h1>"WHERE<br>STARS<br>ARE BORN"</h1>
-                <button href="#hire" class="cta">Hire Us
+                <button href="#hire" class="cta">Request a Demo
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
@@ -254,7 +255,7 @@
     <li>Web-Dev</li>
     <li>About</li>
     <li>Contacts</li>
-    <li>Hire us</li>
+    <li>Demo</li>
     <li>Mission</li>
   </ul>
 </div>
