--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="your digital zone">
+  <meta name="description" content="Ad Astra">
   <meta name="keywords" content="">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="icon" type="image/x-icon" href="/assets/img/logo.ico">
@@ -59,7 +59,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/introduction-visual.png" alt="Welcome">
+                <img src="assets/img/logo.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#Growth">
