--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>AstrA</title>
+  <title>AstrA - Web Development, Branding, and Hosting Services</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Ad Astra">
+  <meta name="description" content="AstrA - Web development, branding, and hosting services to elevate your business and achieve exponential growth.">
   <meta name="keywords" content="">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="icon" type="image/x-icon" href="/assets/img/logo.ico">
-  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "AstrA",
+    "url": "https://example.com",
+    "logo": "https://example.com/assets/img/logo.png",
+    "description": "Web development, branding, and hosting services to elevate your business."
+  }
+  </script>
 </head>
 <body>
 
@@ -59,7 +68,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/logo.png" alt="Welcome">
+                <img src="assets/img/logo.png" alt="AstrA Logo" loading="lazy">
               </div>
               <div class="intro--options">
                 <a href="#Growth">
@@ -241,7 +250,6 @@
                     </span>
                   </a>
                 <img src="assets/img/growth-visual.png" alt="About Us">
-                <iframe src="https://zoned.substack.co/embed" width="100%" height="23%" style="margin-top: 10px; margin-bottom: 30px; border: none; background:rgb(0, 0, 0); border-radius: 15px; color: black;" frameborder="0" scrolling="no"></iframe>
               </div>
             </div>
           </li>
